--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -373,10 +373,61 @@ h5.page-title{
 
 
 
+/* health */
+/* health/index */
+.healthindex{
+    padding: 1rem;
+}
+
+
+/* health/search */
+.healthsearch{
+    padding: 1rem;
+}
+
+
+/* health/add */
+.healthadd{
+    padding: 1rem;
+}
+
+
+
 /* home */
 /* home/index */
 .homeindex{
     padding: 1rem;
+}
+
+
+
+/* login */
+/* login/index */
+.login{
+    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.login .title{
+    position: static;
+}
+
+.login .loginform{
+    position: static;
+}
+
+.login .title h1{
+    color: var(--white);
+    
+}
+
+.login .title h2{
+    color: var(--white);
 }
 
 
@@ -417,37 +468,6 @@ h5.page-title{
 
 
 
-/* login */
-/* login/index */
-.login{
-    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
-    display: flex;
-    align-items: center;
-    flex-direction: column; 
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-}
-
-.login .title{
-    position: static;
-}
-
-.login .loginform{
-    position: static;
-}
-
-.login .title h1{
-    color: var(--white);
-    
-}
-
-.login .title h2{
-    color: var(--white);
-}
-
-
-
 /* result */
 /* result/index */
 .resultindex{
@@ -470,6 +490,27 @@ h5.page-title{
 .resultadd .card{
     margin-bottom: 1rem;
 }
+
+
+
+/* Sport */
+/* Sport/index */
+.sportindex{
+    padding: 1rem;
+}
+
+
+/* Sport/search */
+.sportsearch{
+    padding: 1rem;
+}
+
+
+/* Sport/add */
+.sportadd{
+    padding: 1rem;
+}
+
 
 
 /* staff */
@@ -626,4 +667,12 @@ h5.page-title{
 
 .usercreatebody input{
    text-align: center;
+}
+
+
+
+/* Backup */
+/* Backup/index */
+.backupindex{
+    padding: 1rem;
 }
