--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -31,6 +31,12 @@ body{
     font-weight: 400;
 }
 
+.digital-clock {
+    color: #ffffff;
+    text-align: center;
+    text-shadow: 0 0 1px #ff0;
+  }
+
 .content{
     overflow-y: auto;
     color: var(--main-text-color);
@@ -50,11 +56,6 @@ body{
     border-radius: 0;
     color: white;
 }
-
-/* OVERRIDE BUTTON LIGHT CLASS FOR SELECT PICKER
-.btn-light {
-    background-color: #FFFFFF !important;
-} */
 
 .hrsearch{
     display: block; 
@@ -106,6 +107,13 @@ h5.page-title{
     border: 0px;
     background-color: rgb(216, 117, 117);
     color: #FFFFFF;
+}
+
+/* BOOTSTRAP SELECT STYLE */
+.btn-light {
+    color: #495057;
+    background-color: #FFFFFF !important;
+    border: 1px solid #ced4da !important;
 }
 
 /* Bootstrap Checkbox */
@@ -178,9 +186,6 @@ h5.page-title{
 }
 /* common/topmenu */
 .topmenu{
-    /*font-weight: bold;*/
-    color: var(--sub-theme-color);
-    background-color: var(--white);
     padding: 15px 15px;
     display: flex;
     justify-content: space-between;
@@ -230,7 +235,7 @@ h5.page-title{
 
 /* common/sidenav */
 .left-pane{
-    background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
+    /* background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%); */
     height: 100vh;
     padding: 0rem;
     overflow-y: auto;
