all checked after stu_id to student_id

--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -112,7 +112,7 @@ h5.page-title{
 /* BOOTSTRAP SELECT STYLE */
 .btn-light {
     color: #495057;
-    background-color: #FFFFFF !important;
+    background-color: #FFFFFF;
     border: 1px solid #ced4da !important;
 }
 
