--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -434,6 +434,7 @@ h5.page-title{
 /* login/index */
 .login{
     background-image: linear-gradient(135deg,#8f75da 0,#727cf5 60%);
+    color: var(--white);
     display: flex;
     align-items: center;
     flex-direction: column; 
@@ -456,6 +457,15 @@ h5.page-title{
 }
 
 .login .title h2{
+    color: var(--white);
+}
+
+.login .remember{
+    color: var(--white);
+}
+
+.login .website{
+    text-decoration: none;
     color: var(--white);
 }
 
@@ -658,14 +668,7 @@ h5.page-title{
 
 /* user/search */
 .usersearch{
-    padding: 10rem 20rem 5rem 20rem;
-}
-
-.usersearch .usersearchfilter{
-    background-color: var(--white);
     padding: 4rem;
-    border: 0.05rem solid var(--sub-theme-color);
-    text-align: center;
 }
 
 .usersearch .usersearchheading{
