overview in dev

--- a/themes/default/assets/css/style-student.css
+++ b/themes/default/assets/css/style-student.css
@@ -8,6 +8,13 @@
     border: 0rem;
 }
 
+.stuindex .card-header{
+    color: var(--sub-theme-color);
+    background-color: var(--white);
+    border: 0rem;
+    font-weight: bold;
+}
+
 
 /* student/search */
 .stusearch{
