--- a/themes/default/assets/css/style-health.css
+++ b/themes/default/assets/css/style-health.css
@@ -4,6 +4,17 @@
     padding: 4rem;
 }
 
+.healthindex .card{
+    border: 0px;
+}
+
+.healthindex .card-header{
+    color: var(--sub-theme-color);
+    background-color: var(--white);
+    border: 0rem;
+    font-weight: bold;
+}
+
 
 /* health/search */
 .healthsearch{
