--- a/themes/default/assets/css/style-result.css
+++ b/themes/default/assets/css/style-result.css
@@ -4,6 +4,16 @@
     padding: 4rem;
 }
 
+.resultindex .card{
+    border: 0px;
+}
+
+.resultindex .card-header{
+    color: var(--sub-theme-color);
+    background-color: var(--white);
+    border: 0rem;
+    font-weight: bold;
+}
 
 /* result/search */
 .resultsearch{
