--- a/themes/default/assets/css/style-parent.css
+++ b/themes/default/assets/css/style-parent.css
@@ -4,6 +4,16 @@
     padding: 4rem;
 }
 
+.parentindex .card{
+    border: 0px;
+}
+
+.parentindex .card-header{
+    color: var(--sub-theme-color);
+    background-color: var(--white);
+    border: 0rem;
+    font-weight: bold;
+}
 
 /* parent/search */
 .parentsearch{
