--- a/themes/default/assets/css/style-report.css
+++ b/themes/default/assets/css/style-report.css
@@ -2,3 +2,28 @@
 .report-attendance{
     padding: 4rem;
 }
+
+/* report-student */
+.report-student{
+    padding: 4rem;
+}
+
+/* report-timetable */
+.report-timetable{
+    padding: 4rem;
+}
+
+/* report-result */
+.report-result{
+    padding: 4rem;
+}
+
+/* report-health */
+.report-health{
+    padding: 4rem;
+}
+
+/* report-staff */
+.report-staff{
+    padding: 4rem;
+}
