user permission view created

--- a/themes/default/assets/css/style-user.css
+++ b/themes/default/assets/css/style-user.css
@@ -16,10 +16,8 @@
     padding: 4rem;
 }
 
-
-
-/* Backup */
-/* Backup/index */
-.backupindex{
+/* user/permission */
+.userpermission{
     padding: 4rem;
 }
+
