--- a/themes/default/assets/css/style-student.css
+++ b/themes/default/assets/css/style-student.css
@@ -28,3 +28,66 @@
 .stuprofile{
     padding: 4rem;
 }
+/*
+.stuprofile .profile-card img.avatar {
+	width: 150px;
+	border-radius: 100%;
+}
+
+.stuprofile .profile-card h2 {
+	font-size: 18px;
+	color: #000000;
+	margin-bottom: 25px;
+}
+
+.stuprofile .profile-card .data .data-row {
+	display: flex;
+	padding: 0px 25px;
+	justify-content: space-between;
+}
+
+.stuprofile .profile-card .form-group .label {
+	font-size: 14px;
+}
+
+.stuprofile .profile-card .form-group .form-control {
+	padding: 8px;
+	font-size: 13px;
+	background: #FFF;
+	border: dotted 1px #CCC;
+}*/
+
+
+.stuprofile img.avatar {
+	width: 50px;
+}
+
+.stuprofile .card-body .nav.nav-pills {
+	border-bottom: solid 1px #ececec;
+}
+
+.stuprofile .card-body .nav.nav-pills .nav-link {
+	border-radius: 0;
+}
+
+.stuprofile .card-body .nav.nav-pills a.nav-link {
+	color: #a0a0a0;
+}
+
+.stuprofile .card-body .nav.nav-pills .nav-link.active,.stuprofile .card-body .nav.nav-pills .nav-pills .show>.nav-link {
+	background: #FFFFFF;
+}
+
+.stuprofile .card-body .nav.nav-pills .nav-link.active {
+	border-bottom: solid 2px #727cf5;
+}
+
+
+.stuprofile .card-body .nav.nav-pills a.nav-link.active {
+	color: #727cf5;
+}
+
+.stuprofile .card-body .form-row .form-group input[readonly='readonly'] {
+	font-size: 13px;
+	padding: 4px 10px;
+}
