--- a/themes/default/assets/css/theme-default.css
+++ b/themes/default/assets/css/theme-default.css
@@ -88,32 +88,23 @@
     color: var(--white);
 }
 
-.topmenu .notifications ul.list-group li.list-group-item.notification-each {
-    background: transparent;
-    border: 0;
-    font-size: 14px;
-    padding-bottom: 0;
-    border-radius: 0;
-    display: flex;
-    flex-direction: column;
+.topmenu .notifications ul.list-group li.list-group-item.notification-unread {
+    /* background:#ffffff1e; */
+    background-color: var(--sub-theme-color);
 }
 
 .topmenu .notifications ul.list-group li.list-group-item.notification-each:hover {
-    background: #6a72de;
+    background-color: var(--main-text-color);
 }
 
-.topmenu .notifications ul.list-group li.list-group-item.notification-each .title {
-    font-size: 15px;
-    font-weight: 500;
+.topmenu .notifications ul.list-group li.list-group-item.notification-each i.mark-read:hover {
+    font-weight: 600;
+    color: #be9d2e;
 }
 
-.topmenu .notifications ul.list-group li.list-group-item.notification-each .text {
-    font-size: 14px;
-}
-
-.topmenu .notifications ul.list-group li.list-group-item.notification-each i.la {
-    font-size: 13px;
-    margin: 0;
+.topmenu .notifications ul.list-group li.list-group-item.notification-each i.mark-delete:hover {
+    font-weight: 600;
+    color: #c03b3b;
 }
 
 .topmenu .settings .dropdown-menu{
