--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -140,11 +140,36 @@ h5.page-title{
 
 .topmenu .notifications .dropdown-menu{
     margin: 1rem;
+    width: 40%;
 }
 
 .topmenu .notifications .dropdown-menu i{
     font-size: 1.5rem;
     margin-right: 1rem;
+}
+
+.topmenu .notifications ul.list-group li.list-group-item.notification-each {
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.164);
+    font-size: 1rem;
+    padding-bottom: 0;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.topmenu .notifications ul.list-group li.list-group-item.notification-each .title{
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.topmenu .notifications ul.list-group li.list-group-item.notification-each .text{
+    font-size: 0.8rem;
+}
+
+.topmenu .notifications ul.list-group li.list-group-item.notification-each i.la{
+    font-size: 1rem;
+    margin: 0;
 }
 
 .topmenu .settings{
